--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
     "graphql-import": "^1.0.1",
     "graphql-tools": "^4.0.7",
