--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,8 +9,9 @@
     "experimentalDecorators": true,
     "sourceMap": true,
     "noImplicitReturns": false,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "types": ["node", "jest"]
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "tests"]
 }
