--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,11 @@ services:
     depends_on:
       - db
       - testdb
+      - redisdb
 
   db:
     image: postgres:12
-    restart: always
+    # restart: always
     ports:
       - "5432:5432"
     environment:
@@ -35,7 +36,7 @@ services:
 
   testdb:
     image: postgres:12
-    restart: always
+    # restart: always
     ports:
       - "5433:5432"
     environment:
@@ -43,5 +44,15 @@ services:
       - POSTGRES_USER=test_postgres
       - POSTGRES_PASSWORD=test_postgres
 
+  redisdb:
+    image: redis:latest
+    container_name: rt_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    entrypoint: redis-server --appendonly yes
+
 volumes:
   pgdata:
+  redisdata:
