--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
+    "@types/ioredis": "^4.14.9",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "@types/uuid": "^7.0.2",
@@ -24,6 +25,7 @@
     "graphql-import": "^1.0.1",
     "graphql-tools": "^4.0.7",
     "graphql-yoga": "^1.18.3",
+    "ioredis": "^4.16.2",
     "pg": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.24",
