--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -9,7 +9,7 @@
     "database": "postgres",
     "synchronize": true,
     "logging": true,
-    "entities": ["src/entity/**/*.ts"],
+    "entities": ["src/entity/*.ts", "src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
     "cli": {
@@ -29,7 +29,46 @@
     "synchronize": true,
     "logging": false,
     "dropSchema": true,
-    "entities": ["src/entity/**/*.ts"],
+    "entities": ["src/entity/*.ts", "src/entity/**/*.ts"],
+    "migrations": ["src/migration/**/*.ts"],
+    "subscribers": ["src/subscriber/**/*.ts"],
+    "cli": {
+      "entitiesDir": "src/entity",
+      "migrationsDir": "src/migration",
+      "subscribersDir": "src/subscriber"
+    }
+  },
+  {
+    "name": "local-development",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "postgres",
+    "password": "postgres",
+    "database": "postgres",
+    "synchronize": true,
+    "logging": true,
+    "entities": ["src/entity/*.ts", "src/entity/**/*.ts"],
+    "migrations": ["src/migration/**/*.ts"],
+    "subscribers": ["src/subscriber/**/*.ts"],
+    "cli": {
+      "entitiesDir": "src/entity",
+      "migrationsDir": "src/migration",
+      "subscribersDir": "src/subscriber"
+    }
+  },
+  {
+    "name": "local-test",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5433,
+    "username": "test_postgres",
+    "password": "test_postgres",
+    "database": "test_db",
+    "synchronize": true,
+    "logging": false,
+    "dropSchema": true,
+    "entities": ["src/entity/*.ts", "src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
     "cli": {
