--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
@@ -34,6 +35,6 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test-server": "NODE_ENV=test ts-node src/index.ts",
-    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit"
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit --runInBand"
   }
 }
