--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Rectue CI
 
 on:
   push:
@@ -13,19 +13,33 @@ jobs:
   test-backend:
     runs-on: ubuntu-latest
     services:
-      image: postgres
-      env:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
+      # Postgres Test DB
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: test_postgres
+          POSTGRES_PASSWORD: test_postgres
+          POSTGRES_DB: test_db
 
-      # Set health checks to wait until postgres has started
-      options: >-
-        --health-cmd pg_isready
-        --health-interval 10s
-        --health-timeout 5s
-        --health-retries 5
-      ports:
-        - 5433:5432
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5433:5432
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        # Set health checks to wait until redis has started
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     defaults:
       run:
         shell: bash
@@ -40,3 +54,8 @@ jobs:
       - run: npm run test
         env:
           CI: true
+          SALT: 10
+          TEST_PORT: 4001
+          PORT: 4000
+          LOCAL_PORT: 4002
+          LOCAL_TEST_PORT: 4003
